<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/shopDetailParent"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:layout_margin="4dp"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?attr/selectableItemBackground"
    app:cardCornerRadius="@dimen/card_corner_radius"
    app:cardElevation="@dimen/elevation"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/topImageDetail"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:contentDescription="@string/shop_new_top_image"
            android:scaleType="fitXY"
            android:src="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/guideline4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".6" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".2" />

        <TextView
            android:id="@+id/tvShopDetailName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:ellipsize="end"
            android:text="@string/title"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline3"
            android:textColor="@color/mainGrey_Dark"
            android:textSize="@dimen/font_medium"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/guideline5"
            app:layout_constraintTop_toBottomOf="@id/guideline4" />

        <TextView
            android:id="@+id/tvShopDetailDefinition"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="10dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/title"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline3"
            android:textColor="@color/color_discount"
            android:textSize="@dimen/font_small"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/guideline5"
            app:layout_constraintTop_toBottomOf="@id/tvShopDetailName" />

        <TextView
            android:id="@+id/tvShopDetailProductCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginTop="2dp"
            android:ellipsize="end"
            android:text="@string/title"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline3"
            android:textColor="@color/mainGrey_Dark"
            android:textSize="@dimen/font_medium"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/icon"
            app:layout_constraintTop_toBottomOf="@id/tvShopDetailDefinition" />

        <ImageView
            android:id="@+id/shopDetailLogoPhoto"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/shop_new_logo_photo"
            android:src="@color/black20"
            app:layout_constraintEnd_toStartOf="@id/guideline5"
            app:layout_constraintTop_toTopOf="@id/tvShopDetailName" />

        <TextView
            android:id="@+id/shopDetailLogoPhotoNull"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/round_textview"
            android:contentDescription="@string/shop_new_logo_photo"
            android:text="@string/round_textview_placeholder"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:visibility="gone"
            app:layout_constraintEnd_toStartOf="@id/guideline5"
            app:layout_constraintTop_toTopOf="@id/tvShopDetailName" />


        <ImageView
            android:id="@+id/icon"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_marginTop="4dp"
            android:contentDescription="@string/shirt_icon"
            android:src="@drawable/ic_shirt"
            app:layout_constraintStart_toStartOf="@id/guideline5"
            app:layout_constraintTop_toBottomOf="@id/tvShopDetailDefinition" />

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:backgroundTint="@color/white"
            android:text="@string/follow"
            android:textColor="@color/black"
            app:icon="@drawable/ic_add"
            app:iconPadding="0dp"
            app:iconTint="@color/purple_200"
            app:layout_constraintBottom_toBottomOf="@id/topImageDetail"
            app:layout_constraintEnd_toEndOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</com.google.android.material.card.MaterialCardView>