<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="280dp"
    android:layout_height="200dp"
    android:layout_margin="4dp"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?attr/selectableItemBackground"
    app:cardCornerRadius="@dimen/card_corner_radius"
    app:cardElevation="@dimen/elevation"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    android:id="@+id/shopNewParent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:contentDescription="@string/shop_new_top_image"
            android:id="@+id/topImage"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:src="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/guideline4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".6" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".2" />
        <TextView
            android:id="@+id/tvShopNewName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:ellipsize="end"
            android:text="@string/title"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline3"
            android:textColor="@color/mainGrey_Dark"
            android:textSize="@dimen/font_medium"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/guideline5"
            app:layout_constraintTop_toBottomOf="@id/guideline4" />

        <TextView
            android:id="@+id/tvShopNewDefinition"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:ellipsize="end"
            android:layout_marginEnd="10dp"
            android:maxLines="1"
            android:text="@string/title"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline3"
            android:textColor="@color/color_discount"
            android:textSize="@dimen/font_small"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/guideline5"
            app:layout_constraintTop_toBottomOf="@id/tvShopNewName" />
        <TextView
            android:id="@+id/tvShopNewProductCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginStart="6dp"
            android:ellipsize="end"
            android:text="@string/title"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline3"
            android:textColor="@color/mainGrey_Dark"
            android:textSize="@dimen/font_medium"
            android:textStyle="bold"
            android:textAllCaps="true"
            app:layout_constraintStart_toEndOf="@id/icon"
            app:layout_constraintTop_toBottomOf="@id/tvShopNewDefinition" />

        <ImageView
            android:contentDescription="@string/shop_new_logo_photo"
            android:id="@+id/shopNewLogoPhoto"
            android:layout_width="25dp"
            android:layout_height="25dp"
            app:layout_constraintEnd_toStartOf="@id/guideline5"
            app:layout_constraintTop_toTopOf="@id/tvShopNewName"
            android:layout_marginEnd="8dp"
            android:src="@color/black20"/>
        <ImageView
            android:contentDescription="@string/shirt_icon"
            android:id="@+id/icon"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_marginTop="4dp"
            app:layout_constraintStart_toStartOf="@id/guideline5"
            app:layout_constraintTop_toBottomOf="@id/tvShopNewDefinition"
            android:src="@drawable/ic_shirt"/>


    </androidx.constraintlayout.widget.ConstraintLayout>


</com.google.android.material.card.MaterialCardView>