<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/parentProductCard"
    android:layout_width="190dp"
    android:layout_height="250dp"
    android:layout_margin="4dp"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?attr/selectableItemBackground"
    app:cardCornerRadius="@dimen/card_corner_radius"
    app:cardElevation="@dimen/elevation">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/productImage"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:contentDescription="@string/product_images"
            android:scaleType="centerCrop"
            android:src="@drawable/exampleimg"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.6" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.9" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.75" />

        <ImageView
            android:id="@+id/itemFooter"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:contentDescription="@string/footer_shadow"
            android:src="@color/black5"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/guideline2" />

        <TextView
            android:id="@+id/productHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/product_title_dimen"
            android:layout_marginEnd="@dimen/product_title_dimen"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/title"
            android:textColor="@color/mainGrey_Dark"
            android:textSize="@dimen/font_medium"
            app:layout_constraintBottom_toTopOf="@+id/guideline3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/guideline" />

        <TextView
            android:id="@+id/productSubHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/product_title_dimen"
            android:text="@string/title"
            android:textColor="@color/color_discount"
            android:textSize="@dimen/font_small"
            app:layout_constraintBottom_toTopOf="@+id/itemFooter"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/guideline3" />

        <TextView
            android:id="@+id/itemPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/product_title_dimen"
            android:text="@string/title"
            android:textColor="@color/mainGrey_Dark"
            android:textSize="@dimen/font_large"
            app:layout_constraintBottom_toBottomOf="@+id/itemFooter"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/itemFooter" />

        <TextView
            android:id="@+id/itemPriceDiscount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/product_title_dimen"
            android:text="@string/title"
            android:textColor="@color/color_discount"
            android:textSize="@dimen/font_medium"
            app:layout_constraintBottom_toBottomOf="@+id/itemFooter"
            app:layout_constraintStart_toEndOf="@+id/itemPrice"
            app:layout_constraintTop_toTopOf="@+id/itemFooter" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</com.google.android.material.card.MaterialCardView>